k8s-manifest/db1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db1
  namespace: project-plato
  labels:
    app: db1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db1
  template:
    metadata:
      labels:
        app: db1
    spec:
      containers:
      - name: db1
        image: nginx:1.16.1-alpine
        resources:
          limits:
            cpu: "1"
            memory: "512Mi"
          requests:
            cpu: "0.5"
            memory: "256Mi"
