k8s-manifest/db2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db2
  namespcae: project-plato
  labels:
    app: db2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db2
  template:
    metadata:
      labels:
        app: db2
    spec:
      containers:
      - name: db2
        image: nginx:1.16.1-alpine
        resources:
          limits:
            cpu: "1"
            memory: "1Gi"
          requests:
            cpu: "0.5"
            memory: "512Mi"
