k8s-manifest/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db1-service
  namespace: project-plato
spec:
  selector:
    app: db1
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: db2-service
  namespace: project-plato
spec:
  selector:
    app: db2
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
