k8s-manifest/postgres-exporter-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-exporter
  namespace: default
spec:
  ports:
  - name: http
    port: 9187
    targetPort: 9187
  selector:
    app: prometheus-postgres-exporter
